@@ -7,7 +7,8 @@ Author: Georges Monette [aut, cre],
   John Fox [aut], 
   Michael Friendly [aut], 
   Heather Krause [aut],
-  Fan Zhu [ctb]
+  Fan Zhu [ctb],
+  Anna Zakharian [ctb]
 Maintainer: Georges Monette <georges@yorku.ca>
 Description: Collection of utility functions for linear and mixed models
     including wald: Wald test with functions to generate hypothesis matrices gsp:
