@@ -19,6 +19,7 @@ S3method(cell,default)
 S3method(cell,wald)
 S3method(center,ell)
 S3method(coef,pdInd)
+S3method(coef,pdSym)
 S3method(coef,wald)
 S3method(constant,data.frame)
 S3method(constant,default)
@@ -82,6 +83,7 @@ S3method(rnd,numeric)
 S3method(rpfmt,default)
 S3method(rpfmt,wald)
 S3method(solve,pdInd)
+S3method(solve,pdSym)
 S3method(sub_,default)
 S3method(sub_,factor)
 S3method(tab,array)
@@ -107,6 +109,7 @@ export(Cmat)
 export(ConjComp)
 export(Diff)
 export(DiffI)
+export(Dim.pdSym)
 export(Emat)
 export(Gspline)
 export(Lag)
@@ -229,6 +232,7 @@ export(labs)
 export(lchol)
 export(lin_comb)
 export(llapply)
+export(logDet.pdSym)
 export(long)
 export(lssvd)
 export(lssvd_old)
@@ -260,9 +264,13 @@ export(parDropone)
 export(part)
 export(pch)
 export(pdConstruct.pdInd)
+export(pdConstruct.pdSym)
 export(pdFactor.pdInd)
+export(pdFactor.pdSym)
 export(pdInd)
 export(pdMatrix.pdInd)
+export(pdMatrix.pdSym)
+export(pdSym)
 export(pfmt)
 export(pred.grid)
 export(quasi_table)
@@ -285,6 +293,7 @@ export(std)
 export(stress)
 export(sub_)
 export(sublast)
+export(summary.pdSym)
 export(tab)
 export(tab_)
 export(tab__)
