@@ -1,0 +1,11 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/pdSym.R
+\name{pdSym}
+\alias{pdSym}
+\title{Copy of pdSymm to debug pdInd}
+\usage{
+pdSym(value = numeric(0), form = NULL, nam = NULL, data = parent.frame())
+}
+\description{
+Copy of pdSymm to debug pdInd
+}
